--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.4.4",
     "react-router-dom": "^6.23.1",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.2",
     "styled-components": "^6.1.11",
     "swiper": "^11.1.4"
   },
