--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
+    "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
     "react-router-dom": "^6.23.1",
