--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hello-pangea/dnd": "^16.6.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
@@ -21,6 +24,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-grid-layout": "^1.4.4",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.2",
